Test disable keyboard

--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@ function linkify( selector ) {
 				progress: true,
 				history: true,
 				center: true,
+				showNotes: false,
+				keyboard: false,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
