--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ function linkify( selector ) {
 				history: true,
 				center: true,
 				showNotes: false,
-				keyboard: false,
+				keyboard: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
