--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
-				<section data-background-image="http://lorempixel.com/image_output/technics-q-c-1920-1920-7.jpg">
+				<section data-background-image="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/No_image_available_-_museum.svg/2000px-No_image_available_-_museum.svg.png">
 					<h1>Reveal.js</h1>
 					<h3>HTML Presentations Made Easy</h3>
 					<p>
