--- a/test/examples/slide-backgrounds.html
+++ b/test/examples/slide-backgrounds.html
@@ -64,15 +64,15 @@
 					</section>
 				</section>
 
-				<section data-background-transition="slide" data-background="assets/image1.png">
+				<section data-background-transition="slide" data-background="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/No_image_available_-_museum.svg/2000px-No_image_available_-_museum.svg.png">
 					<h2>Background image</h2>
 				</section>
 
 				<section>
-					<section data-background-transition="slide" data-background="assets/image1.png">
+					<section data-background-transition="slide" data-background="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/No_image_available_-_museum.svg/2000px-No_image_available_-_museum.svg.png">
 						<h2>Background image</h2>
 					</section>
-					<section data-background-transition="slide" data-background="assets/image1.png">
+					<section data-background-transition="slide" data-background="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/No_image_available_-_museum.svg/2000px-No_image_available_-_museum.svg.png">
 						<h2>Background image</h2>
 					</section>
 				</section>
